clone my_bike_landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,312 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>MYBIKE</title>
+    <link rel="icon" href="./images/favicon.svg">
+    <link rel="stylesheet" href="./styles/style.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Landing Page</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a href="#" class="top-bar__logo-link">
+              <img
+                src="images/logo.png"
+                alt="Bike logo"
+                class="top-bar__logo"
+              >
+            </a>
+            <div class="top-bar__icons">
+              <a href="tel:+1 234 5555-55-55" class="icon icon--phone"></a>
+              <a href="#menu" class="icon icon--menu"></a>
+            </div>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">Take the Streets</h1>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a href="#" class="top-bar__logo-link">
+            <img
+              src="images/menu_logo.png"
+              alt="Bike logo"
+              class="top-bar__logo"
+            >
+          </a>
+          <a href="#" class="icon icon--close"></a>
+        </div>
+        <div class="menu__bottom">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#">Home</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#">About us</a>
+              </li>
+              <li class="nav__item">
+                <a  class="nav__link"href="#compare-bikes">Compare bikes</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#details">Details</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="tel:+1 234 5555-55-55" class="menu-phone-number">
+            +1 234 5555-55-55
+          </a>
+          <a href="tel:+1 234 5555-55-55" class="menu-book-a-test-ride">
+            Book a test ride
+          </a>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="move-free">
+            <h2 class="
+              section-title
+              move-free__title
+              section-title--align-left"
+            >
+              Move Free
+            </h2>
+            <div class="move-free__content">
+              <p class="move-free__text">Shift your ride, not gears. Find the fastest way to move in the city as the bike adapts intuitively to power the speed you need.</p>
+            </div>
+          </section>
+
+          <section class="compare" id="compare-bikes">
+            <h2 class="section-title section-title--margin-bottom-compare">Compare Bikes</h2>
+            <div class="compare__products">
+              <article class="product compare__product">
+                <img
+                  src="./images/products/sporty-4.png"
+                  alt="Sporty-4"
+                  class="product__photo"
+                >
+                <h3 class="product__title">Sporty-4</h3>
+                <p class="product__description">The iconic frame brought to a new performance height as a sporty, active ride.</p>
+                <p class="product__price">$ 2 590</p>
+              </article>
+
+              <article class="product compare__product">
+                <img
+                  src="./images/products/ride-in-town-ST.png"
+                  alt="Sporty-4"
+                  class="product__photo"
+                >
+                <h3 class="product__title">Ride in town ST</h3>
+                <p class="product__description">An open frame for an upright riding position as the most comfortable ride in town.</p>
+                <p class="product__price">$ 2 590</p>
+              </article>
+
+              <article class="product compare__product">
+                <img
+                  src="./images/products/agile-ride-3.png"
+                  alt="Sporty-4"
+                  class="product__photo"
+                >
+                <h3 class="product__title">Agile ride 3</h3>
+                <p class="product__description">The lightweight frame that has earned its street tread as a sleek, agile ride.</p>
+                <p class="product__price">$ 2 090</p>
+              </article>
+            </div>
+          </section>
+
+          <section class="details" id="details">
+            <h2 class="section-title section-title--margin-bottom-details ">Details</h2>
+
+            <div class="details__wrapper">
+              <article class="detail">
+                <div class="detail__photos">
+                  <a href="#" class="detail__link detail__link--wide">
+                    <img
+                      src="./images/details/auto-unlock-wide.png"
+                      alt="Auto Unlock"
+                      class="detail__photo"
+                    >
+                  </a>
+
+                  <a href="#" class="detail__link detail__link--square">
+                    <img
+                      src="./images/details/auto-unlock-square.png"
+                      alt="Auto Unlock"
+                      class="detail__photo"
+                    >
+                  </a>
+                </div>
+
+                <h3 class="detail__title">Auto Unlock</h3>
+                <p class="detail__description">
+                  The app senses when you're nearby to unlock automatically. GPS tracking so you know where your bike is and can track it anytime.
+                </p>
+              </article>
+
+              <article class="detail">
+                <div class="detail__photos">
+                  <a href="#" class="detail__link detail__link--wide">
+                    <img
+                      src="./images/details/range-Integrated-lights-wide.png"
+                      alt="Range & Integrated lights"
+                      class="detail__photo"
+                    >
+                  </a>
+
+                  <a href="#" class="detail__link detail__link--square">
+                    <img
+                      src="./images/details/range-integrated-lights-square.png"
+                      alt="Range & Integrated lights"
+                      class="detail__photo"
+                    >
+                  </a>
+                </div>
+
+                <h3 class="detail__title">Range & Integrated lights</h3>
+                <p class="detail__describtion">
+                  The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+                </p>
+              </article>
+
+              <article class="detail">
+                <div class="detail__photos">
+                  <a href="#" class="detail__link detail__link--square">
+                    <img
+                      src="./images/details/hydraulic-disc-brakes-square.png"
+                      alt="Hydraulic disc brakes & Lightweight"
+                      class="detail__photo"
+                    >
+                  </a>
+
+                  <a href="#" class="detail__link detail__link--wide">
+                    <img
+                      src="./images/details/hydraulic-disc-brakes-wide.png"
+                      alt="Hydraulic disc brakes & Lightweight"
+                      class="detail__photo"
+                    >
+                  </a>
+                </div>
+
+                <h3 class="detail__title">Hydraulic disc brakes & Lightweight</h3>
+                <p class="detail__describtion">
+                  Brakes with total stopping power the second you make contact. The removable battery has up to 70km battery autonomy and weighs only 2.4 kg. Lights integrated into the frame give you always-on visibility day and night.
+                </p>
+              </article>
+
+              <div class="primary-button">
+                <a
+                  href="#"
+                  class="
+                    primary-button__link
+                    primary-button__link--detail"
+                >
+                  Explore
+                </a>
+              </div>
+            </div>
+          </section>
+
+          <section class="contacts" id="contacts">
+            <h2 class="section-title">Contacts</h2>
+
+            <div class="contacts__wrappes">
+              <div class="contacts__wrappes--input">
+                <form
+                  action="#"
+                  class="form"
+                  onsubmit="this.reset(); return false"
+                  >
+                  <input
+                    class="form__input form__input--name"
+                    type="text"
+                    name="username"
+                    placeholder="Name"
+                    required
+                  >
+
+                  <input
+                    class="form__input form__input--email"
+                    type="email"
+                    name="email"
+                    placeholder="Email"
+                    required
+                  >
+
+                  <textarea
+                    class="form__input form__input--message"
+                    name="message"
+                    placeholder="Message"
+                  ></textarea>
+
+                  <div class="primary-button">
+                    <button
+                      type="submit"
+                      class="primary-button__link primary-button__link--form"
+                    >
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+
+              <div class="contacts__wrappes--content">
+                <div class="contact__info">
+                  <article class="contacts__list">
+                    <p class="contacts__title">Phone</p>
+                    <a
+                      href="tel:+1 234 5555-55-55"
+                      class="contacts__value"
+                    >
+                      +1 234 5555-55-55
+                    </a>
+                  </article>
+
+                  <article class="contacts__list">
+                    <p class="contacts__title">Email</p>
+                    <a
+                      href="mailto:hello@miami.com" class="contacts__value"
+                    >
+                      hello@miami.com
+                    </a>
+                  </article>
+
+                  <article class="contacts__list">
+                    <p class="contacts__title">Address</p>
+                    <a
+                      target="_blank"
+                      href="https://maps.app.goo.gl/9y1WcCGLH8esQq9v8" class="contacts__value"
+                    >
+                      400 First Ave.<br>
+                      Suite 700<br>
+                      Minneapolis, MN 55401
+                    </a>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+    </footer>
   </body>
 </html>
